# Candidate-Data-Transformer

./: README.md  pyproject.toml  requirements.txt
sample_data/: ats_candidates.json  recruiter_candidates.csv
src/candidate_transformer/: __init__.py
src/candidate_transformer/app/: streamlit_app.py
src/candidate_transformer/core/: __init__.py  config.py  exceptions.py
src/candidate_transformer/domain/: __init__.py  candidate.py  candidate_record.py
src/candidate_transformer/ingestion/: __init__.py  ats_json_parser.py  base.py  exceptions.py  github_profile_parser.py  github_url_parser.py  linkedin_parser.py  recruiter_csv_parser.py
src/candidate_transformer/matching/: __init__.py  candidate_matcher.py
src/candidate_transformer/merging/: __init__.py  merge_engine.py
src/candidate_transformer/normalization/: __init__.py  date_normalizer.py  email_normalizer.py  location_normalizer.py  (+2 more)
tests/unit/: test_ai_agent.py  test_ats_json_parser.py  test_candidate_matcher.py  test_candidate_pipeline.py  test_candidate_record.py  test_candidate_schema.py  test_confidence_calculator.py  test_config.py  test_date_normalizer.py  test_email_normalizer.py  test_github_profile_parser.py  test_github_service.py  test_github_url_parser.py  test_link_classifier.py  test_linkedin_parser.py  test_location_normalizer.py  test_merge_engine.py  test_output_validator.py  test_phone_normalizer.py  test_projection_engine.py  test_provenance_builder.py  test_recruiter_csv_parser.py  test_resume_integration.py  test_resume_parser.py  test_resume_service.py  test_skill_normalizer.py
(+16 files in other folders)
