[project]
name = "candidate-data-transformer"
version = "0.1.0"
description = "Candidate data transformation pipeline."
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF",
    "pandas",
    "phonenumbers",
    "pydantic>=2",
    "python-dotenv",
    "rapidfuzz",
    "streamlit",
    "python-docx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
